# enpitsu

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  main.cpp
.github/workflows/: cmake.yml
include/: Camera3D.h  ControlObject.h  EBO.h  Exception.h  GeometryEssentials.h  InputEvents.h  Object.h  Object2D.h  Object3D.h  Screen.h  ShaderProgram.h  ShaderSources.h  SolidColor.h  Sprite.h  Square.h  Texture2D.h  Texture2DShader.h  Triangles.h  Triangles2D.h  Triangles3D.cpp  Triangles3D.h  VAO.h  VBO.h  defines.h
include/GL/: EBO.h  VAO.h  VBO.h
include/enpitsu/GL/: EBO.h  VAO.h  VBO.h  Wrapper.h
include/enpitsu/helpers/: Drawable.h  Exception.h  GeometryEssentials.h  InputEvents.h  defines.h
include/enpitsu/objects/: Camera2D.h  Camera3D.h  ControlObject.h  Cube.h  Line2D.h  Lines2D.h  Object.h  Object2D.h  Object3D.h  Pyramid.h  Screen.h  Sprite.h  Square.h  Triangles2D.h  Triangles3D.h
include/enpitsu/shading/: LightSourceShader.h  LitShaderBase.h  ShaderProgram.h  ShaderSources.h  SolidColor.h  Texture2D.h  Texture2DShader.h
include/helpers/: GeometryEssentials.h  InputEvents.h
include/objects/: Camera3D.h  ControlObject.h  Cube.h  Line2D.h  Lines2D.h  Object.h  Object2D.h  Object3D.h  Screen.h  Sprite.h  Square.h
include/shading/: ShaderProgram.h  ShaderSources.h  SolidColor.h  Texture2D.h
shaders/: default.frag  default.vert  default3D.frag  default3D.vert  light.frag  light.vert  texture.frag  texture.vert  texture3D.frag  texture3D.vert
src/: Camera2D.cpp  Camera3D.cpp  ControlObject.cpp  Cube.cpp  EBO.cpp  GeometryEssentials.cpp  LightSourceShader.cpp  Line2D.cpp  Lines2D.cpp  LitShaderBase.cpp  Object.cpp  Object.h  Object2D.cpp  Object3D.cpp  Pyramid.cpp  Screen.cpp  Screen.h  ShaderProgram.cpp  SolidColor.cpp  Sprite.cpp  Square.cpp  Texture2D.cpp  Texture2DShader.cpp  Triangles.cpp  Triangles2D.cpp  Triangles3D.cpp  VAO.cpp  VBO.cpp  defines.h
testsrc/include/: AObject.h  AScreen.h  App.h  ObjectMaker.h
testsrc/src/: AObject.cpp  AScreen.cpp  App.cpp  ObjectMaker.cpp
